--- a/native/NetMiniZ.Native.linux-x64.nuspec
+++ b/native/NetMiniZ.Native.linux-x64.nuspec
@@ -4,10 +4,10 @@
 
     <!-- package -->
     <id>NetMiniZ.Native.linux-x64</id>
-    <title>NetMiniZ - Native binaries for Linux-x64</title>
-    <version>1.0.0</version>
-    <description>This package complements the NetMiniZ package and contains native binaries of libminiz for Linux-x64</description>
-    <summary>Native binaries of libminiz for Linux-x64</summary>
+    <title>NetMiniZ - Native binaries for linux-x64</title>
+    <version>1.0.2</version>
+    <description>This package complements the NetMiniZ package and contains native binaries of libminiz for linux-x64</description>
+    <summary>Native binaries of libminiz for linux-x64</summary>
     <projectUrl>https://github.com/jsm174/net-miniz</projectUrl>
     <repository type="git" url="https://github.com/jsm174/net-miniz" />
     <tags>libminiz binaries</tags>
@@ -19,10 +19,17 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>Jason Millard</copyright>
 
+    <dependencies>
+      <group targetFramework=".NETStandard2.0" />
+    </dependencies>
+
   </metadata>
   <files>
 
-    <!-- Include libminiz Linux-x64 binaries -->
+    <!-- The build bits -->
+    <file src="targets/NetMiniZ.Native.linux-x64.targets" target="build/netstandard2.0" />
+
+    <!-- Include libminiz linux-x64 binaries -->
     <file src="../libminiz/build/lib/libminiz.so.*" target="runtimes/linux-x64/native" />
 
     <!-- Include the license -->
@@ -30,6 +37,9 @@
 
     <!-- Include the license -->
     <file src="../libminiz/build/lib/ChangeLog.md" />
+
+    <!-- A dummy reference which prevents NuGet from adding any compilation references when this package is imported -->
+    <file src="_._" target="lib/netstandard2.0" />
 
   </files>
 </package>
