--- a/.github/workflows/NetMiniZ.yml
+++ b/.github/workflows/NetMiniZ.yml
@@ -17,11 +17,11 @@ jobs:
            nuget restore
            dotnet build -c Release 
       - name: Build Contents
-        run: ls -lart NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1
+        run: ls -lart NetMiniZ.Tests/bin/Release/netcoreapp3.1
         shell: bash
       - name: Test
         run: |
-           $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1/NetMiniZ.Tests.dll
+           $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/Release/netcoreapp3.1/NetMiniZ.Tests.dll
         shell: bash
 
   netminiz-win-x86:
@@ -35,13 +35,13 @@ jobs:
       - name: Build
         run: |
            nuget restore
-           dotnet build -c Release -p:Platform=x86
+           dotnet build -c Release -p:PlatformTarget=x86
       - name: Build Contents
-        run: ls -lart NetMiniZ.Tests/bin/x86/Release/netcoreapp3.1
+        run: ls -lart NetMiniZ.Tests/bin/Release/netcoreapp3.1
         shell: bash
       - name: Test
         run: |
-           $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/x86/Release/netcoreapp3.1/NetMiniZ.Tests.dll
+           $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe --settings:NetMiniZ.Tests/x86.runsettings NetMiniZ.Tests/bin/Release/netcoreapp3.1/NetMiniZ.Tests.dll
         shell: bash
 
   netminiz-osx-x64:
@@ -57,10 +57,10 @@ jobs:
            nuget restore
            msbuild /p:Configuration=Release
       - name: Build Contents
-        run: ls -lart NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1
+        run: ls -lart NetMiniZ.Tests/bin/Release/netcoreapp3.1
       - name: Test
         run: |
-           mono $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1/NetMiniZ.Tests.dll
+           mono $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/Release/netcoreapp3.1/NetMiniZ.Tests.dll
 
   netminiz-linux-x64:
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
            nuget restore
            msbuild /p:Configuration=Release
       - name: Build Contents
-        run: ls -lart NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1
+        run: ls -lart NetMiniZ.Tests/bin/Release/netcoreapp3.1
       - name: Test
         run: |
-           mono $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/x64/Release/netcoreapp3.1/NetMiniZ.Tests.dll
+           mono $HOME/.nuget/packages/microsoft.testplatform/16.7.0/tools/net451/Common7/IDE/Extensions/TestPlatform/vstest.console.exe NetMiniZ.Tests/bin/Release/netcoreapp3.1/NetMiniZ.Tests.dll
