--- a/.github/workflows/nuget-native.yml
+++ b/.github/workflows/nuget-native.yml
@@ -18,9 +18,13 @@ jobs:
           cd build/libminiz
           cmake -G "Visual Studio 16 2019" -A x64 -B build
           cmake --build build --config Release
-          nuget pack ../native/NetMiniZ.Native.win-x64.nuspec -OutputDirectory ../../nupkg
+      - name: Pack
+        run: |
+          nuget pack build/native/NetMiniZ.Native.win-x64.nuspec -OutputDirectory nupkg
       - name: Publish
-          nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}
+        run: |
+          nuget push nupkg/*.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
+        shell: bash
       - uses: actions/upload-artifact@v2
         with: 
           name: NetMiniZ.Native.nuget
@@ -37,9 +41,13 @@ jobs:
           cd build/libminiz
           cmake -G "Visual Studio 16 2019" -A Win32 -B build
           cmake --build build --config Release
-          nuget pack ../native/NetMiniZ.Native.win-x86.nuspec -OutputDirectory ../../nupkg
+      - name: Pack
+        run: |
+          nuget pack build/native/NetMiniZ.Native.win-x86.nuspec -OutputDirectory nupkg
       - name: Publish
-          nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}
+        run: |
+          nuget push nupkg/*.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
+        shell: bash
       - uses: actions/upload-artifact@v2
         with: 
           name: NetMiniZ.Native.nuget
@@ -56,9 +64,12 @@ jobs:
           cd build/libminiz
           cmake -B build
           cmake --build build
-          nuget pack ../native/NetMiniZ.Native.osx-x64.nuspec -OutputDirectory ../../nupkg
+      - name: Pack
+        run: |
+          nuget pack build/native/NetMiniZ.Native.osx-x64.nuspec -OutputDirectory nupkg
       - name: Publish
-          nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}
+        run: |
+          nuget push nupkg/*.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
       - uses: actions/upload-artifact@v2
         with: 
           name: NetMiniZ.Native.nuget
@@ -75,29 +86,29 @@ jobs:
           cd build/libminiz
           cmake -B build
           cmake --build build
-          nuget pack ../native/NetMiniZ.Native.linux-x64.nuspec -OutputDirectory ../../nupkg
+      - name: Pack
+        run: |
+          nuget pack build/native/NetMiniZ.Native.linux-x64.nuspec -OutputDirectory nupkg
       - name: Publish
-          nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}
-      - uses: actions/upload-artifact@v2
-        with:
-          name: libminiz-linux-x64
-          path: libminiz/build/lib/
+        run: |
+          nuget push nupkg/*.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
       - uses: actions/upload-artifact@v2
         with: 
           name: NetMiniZ.Native.nuget
           path: nupkg/
 
   nuget-native-native:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' }}
     steps:
       - uses: actions/checkout@v2
       - uses: nuget/setup-nuget@v1
-      - name: Build
+      - name: Pack
         run: |
           nuget pack build/native/NetMiniZ.Native.nuspec -OutputDirectory nupkg
       - name: Publish
-          nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}
+        run: |
+          nuget push nupkg/*.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
       - uses: actions/upload-artifact@v2
         with:
           name: NetMiniZ.Native.nuget
