--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  Nuget:
+  nuget:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' }}
     steps:
@@ -21,7 +21,8 @@ jobs:
         run: |
           dotnet pack -c Release -o nupkg --no-build
       - name: Publish
-          dotnet push nupkg/*.nupkg -k ${{ secrets.NUGET_KEY }}
+        run: |
+          dotnet nuget push nupkg/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json
       - uses: actions/upload-artifact@v2
         with: 
           name: NetMiniZ.nuget
