--- a/src/NetMiniZ/NetMiniZ.csproj
+++ b/src/NetMiniZ/NetMiniZ.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Cross platform version of Miniz based on MiniZ.Net by ActuallyaDeviloper. https://github.com/ActuallyaDeviloper/MiniZ.Net</Description>
-    <AssemblyVersion>1.2.0</AssemblyVersion>
-    <Authors>Jason Millard</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Interop\Libraries.*.cs</DefaultItemExcludes>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <Description>Cross platform version of Miniz based on MiniZ.Net by ActuallyaDeviloper. https://github.com/ActuallyaDeviloper/MiniZ.Net</Description>
+    <AssemblyVersion>1.2.1</AssemblyVersion>
+    <Authors>Jason Millard</Authors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackOnBuild>true</PackOnBuild>
     <Copyright>Copyright 2020 © Jason Millard All rights reserved</Copyright>
@@ -14,9 +17,6 @@
     <PackageProjectUrl>https://github.com/jsm174/net-miniz</PackageProjectUrl>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <InformationalVersion>$(AssemblyVersion)</InformationalVersion>
-    <DefaultItemExcludes>$(DefaultItemExcludes);Interop\Libraries.*.cs</DefaultItemExcludes>
-    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <!-- Give an initial value based on the operating system where it's currently running on. -->
@@ -36,6 +36,18 @@
     <Compile Include="Interop\Libraries.$(TargetOS).cs">
         <Link>Interop\Libraries.cs</Link>
     </Compile>
+  </ItemGroup>
+
+  <!-- Include .NET Standard packages on Linux and macOS -->
+  <ItemGroup>
+    <None Include="$(MSBuildThisFileDirectory)bin\$(Platform)\$(Configuration)\netstandard2.0\Linux\NetMiniZ.dll">
+      <Pack>true</Pack>
+      <PackagePath>runtimes\linux\lib\netstandard2.0</PackagePath>
+    </None>
+    <None Include="$(MSBuildThisFileDirectory)bin\$(Platform)\$(Configuration)\netstandard2.0\OSX\NetMiniZ.dll">
+      <Pack>true</Pack>
+      <PackagePath>runtimes\osx\lib\netstandard2.0</PackagePath>
+    </None>
   </ItemGroup>
 
   <!-- Include .NET Standard packages on Linux and macOS -->
