--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -10,7 +10,7 @@ on:
       - '.github/workflows/native.yml'
 
 env:
-  NUGET_VERSION: 1.3.0
+  NUGET_VERSION: 1.4.0
   MINIZ_VERSION: 2.2.0
 
 defaults:
@@ -66,12 +66,12 @@ jobs:
             platform: linux-x64
             libminiz: "libminiz.so.${{ needs.version.outputs.minizver }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build libminiz-${{ matrix.platform }}
         run: |
           cd native/libminiz
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            cmake -G "Visual Studio 16 2019" ${{ matrix.extra-flags }} -A ${{ matrix.platform-name }} -B build
+            cmake -G "Visual Studio 17 2022" ${{ matrix.extra-flags }} -A ${{ matrix.platform-name }} -B build
             cmake --build build --config Release
           else
             cmake -DCMAKE_BUILD_TYPE=Release ${{ matrix.extra-flags }} -B build
@@ -83,18 +83,35 @@ jobs:
           cp native/libminiz/build/${{ matrix.libminiz }} tmp
           cp native/libminiz/build/ChangeLog.md tmp
           cp native/libminiz/build/LICENSE tmp
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: libminiz-${{ needs.version.outputs.minizver }}-${{ matrix.platform }}
           path: tmp
 
+  post-build:
+    runs-on: macos-latest
+    needs: [ version, build ]
+    name: Build libminiz-osx
+    steps:
+      - uses: actions/download-artifact@v3
+      - run: |
+          mkdir tmp
+          cp libminiz-${{ needs.version.outputs.minizver }}-osx-x64/LICENSE tmp
+          lipo -create -output tmp/libminiz.${{ needs.version.outputs.minizver }}.dylib \
+             libminiz-${{ needs.version.outputs.minizver }}-osx-x64/libminiz.${{ needs.version.outputs.minizver }}.dylib \
+             libminiz-${{ needs.version.outputs.minizver }}-osx-arm64/libminiz.${{ needs.version.outputs.minizver }}.dylib
+      - uses: actions/upload-artifact@v3
+        with:
+          name: libminiz-${{ needs.version.outputs.minizver }}-osx
+          path: tmp
+
   nuget:
     runs-on: ubuntu-latest
-    needs: [ version, build ]
+    needs: [ version, post-build ]
     steps:
       - uses: nuget/setup-nuget@v1
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
         with:
           path: native/nuget
       - name: Pack
@@ -104,15 +121,17 @@ jobs:
           mv libminiz-*-win-x86 libminiz-win-x86
           mv libminiz-*-osx-x64 libminiz-osx-x64
           mv libminiz-*-osx-arm64 libminiz-osx-arm64
+          mv libminiz-*-osx libminiz-osx
           mv libminiz-*-linux-x64 libminiz-linux-x64
           sed -i 's/__VERSION__/${{ needs.version.outputs.semver }}/g' *.nuspec
           nuget pack NetMiniZ.Native.win-x64.nuspec -OutputDirectory nupkg
           nuget pack NetMiniZ.Native.win-x86.nuspec -OutputDirectory nupkg
           nuget pack NetMiniZ.Native.osx-x64.nuspec -OutputDirectory nupkg
           nuget pack NetMiniZ.Native.osx-arm64.nuspec -OutputDirectory nupkg
+          nuget pack NetMiniZ.Native.osx.nuspec -OutputDirectory nupkg
           nuget pack NetMiniZ.Native.linux-x64.nuspec -OutputDirectory nupkg
           nuget pack NetMiniZ.Native.nuspec -OutputDirectory nupkg
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: nupkg
           path: native/nuget/nupkg
@@ -123,7 +142,7 @@ jobs:
     if: github.repository == 'jsm174/net-miniz' && github.ref == 'refs/heads/master' && github.event_name == 'push'
     steps:
       - uses: nuget/setup-nuget@v1
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: nupkg
       - name: Publish
@@ -134,4 +153,5 @@ jobs:
           nuget push NetMiniZ.Native.win-x86.${{ needs.version.outputs.semver }}.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
           nuget push NetMiniZ.Native.osx-x64.${{ needs.version.outputs.semver }}.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
           nuget push NetMiniZ.Native.osx-arm64.${{ needs.version.outputs.semver }}.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
+          nuget push NetMiniZ.Native.osx.${{ needs.version.outputs.semver }}.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
           nuget push NetMiniZ.Native.linux-x64.${{ needs.version.outputs.semver }}.nupkg -ApiKey ${{ secrets.NUGET_KEY }} -src https://api.nuget.org/v3/index.json
