--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,11 @@ jobs:
           - os: windows-latest
             rid: win-x86
           - os: macos-latest
-            rid: osx-x64
-          - os: macos-latest
-            rid: osx-arm64
+            rid: osx
           - os: ubuntu-latest
             rid: linux-x64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
@@ -41,7 +39,6 @@ jobs:
           cd src/NetMiniZ.Tests
           dotnet build -c Release -r ${{ matrix.rid }}
       - name: Test
-        if: matrix.rid != 'osx-arm64'
         run: |
           cd src/NetMiniZ.Tests
           dotnet test --runtime ${{ matrix.rid }}
