--- a/native/nuget/NetMiniZ.Native.nuspec
+++ b/native/nuget/NetMiniZ.Native.nuspec
@@ -17,6 +17,14 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>NetMiniZ development team and contributors</copyright>
     <dependencies>
+      <group targetFramework="netstandard2.0">
+        <dependency id="NetMiniZ.Native.win-x64" version="__VERSION__" include="native" />
+        <dependency id="NetMiniZ.Native.win-x86" version="__VERSION__" include="native" />
+        <dependency id="NetMiniZ.Native.osx-x64" version="__VERSION__" include="native" />
+        <dependency id="NetMiniZ.Native.osx-arm64" version="__VERSION__" include="native" />
+        <dependency id="NetMiniZ.Native.osx" version="__VERSION__" include="native" />
+        <dependency id="NetMiniZ.Native.linux-x64" version="__VERSION__" include="native" />
+      </group>
       <group targetFramework="netstandard2.1">
         <dependency id="NetMiniZ.Native.win-x64" version="__VERSION__" include="native" />
         <dependency id="NetMiniZ.Native.win-x86" version="__VERSION__" include="native" />
@@ -29,6 +37,7 @@
   </metadata>
   <files>
     <!-- A dummy reference which prevents NuGet from adding any compilation references when this package is imported -->
+    <file src="_._" target="lib\netstandard2.0" />
     <file src="_._" target="lib\netstandard2.1" />
   </files>
 </package>
