--- a/native/nuget/NetMiniZ.Native.osx-arm64.nuspec
+++ b/native/nuget/NetMiniZ.Native.osx-arm64.nuspec
@@ -17,17 +17,20 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>NetMiniZ development team and contributors</copyright>
     <dependencies>
+      <group targetFramework="netstandard2.0" />
       <group targetFramework="netstandard2.1" />
     </dependencies>
   </metadata>
   <files>
     <!-- The build bits -->
+    <file src="targets\NetMiniZ.Native.osx-arm64.targets" target="build\netstandard2.0" />
     <file src="targets\NetMiniZ.Native.osx-arm64.targets" target="build\netstandard2.1" />
     <!-- Include libminiz osx-arm64 binaries -->
     <file src="libminiz-osx-arm64\libminiz.*.dylib" target="runtimes\osx-arm64\native" />
     <!-- Include the license -->
     <file src="..\..\LICENSE.txt" />
     <!-- A dummy reference which prevents NuGet from adding any compilation references when this package is imported -->
+    <file src="_._" target="lib\netstandard2.0" />
     <file src="_._" target="lib\netstandard2.1" />
   </files>
 </package>
